# CPString

./: .gitignore  CMakeLists.txt  README.md  library.properties
Builds/Linux/: CMakeLists.txt
Builds/Linux/src/: CMakeLists.txt
Builds/Linux/src/EmbeddedString/: CMakeLists.txt  EmbeddedString.cpp  EmbeddedString_BuildSettings.h
Builds/Linux/src/EmbeddedString/EmbeddedString_Flash/: EmbeddedString_Flash.h
Builds/Linux/src/EmbeddedString/src/: CMakeLists.txt  EmbeddedString_BuildSettings.h  EmbeddedString_CompileSetup.h  EmbeddedString_Definitions.h
Builds/Linux/src/EmbeddedString/src/EmbeddedString_Flash/: EmbeddedString_FlashDefinitions.h
Builds/XCode/: CMakeLists.txt  main.cpp
Builds/XCode/src/: CMakeLists.txt
Builds/XCode/src/EmbeddedString/: EmbeddedString.h  EmbeddedString_BuildSettings.h
Builds/XCode/src/EmbeddedString/EmbeddedString_Flash/: CMakeLists.txt
CompilationResources/EmbeddedString_Arduino/: library.properties
CompilationResources/EmbeddedString_Arduino/src/: EmbeddedString.cpp  EmbeddedString.h  EmbeddedString_BuildSettings.h  EmbeddedString_CompileSetup.h
build_XCode/: CMakeCache.txt  Makefile  cmake_install.cmake
build_XCode/src/: Makefile  cmake_install.cmake
build_XCode/src/EmbeddedString_Flash/: Makefile  cmake_install.cmake
build_XCode/tests/: Makefile  cmake_install.cmake
build_XCode/tests/BuildTest/: Makefile  cmake_install.cmake
build_XCode/tests/BuildTest/src/: EString_BuildTest  Makefile  cmake_install.cmake
build_Xcode/: CMakeCache.txt
build_Xcode/CMakeScripts/: ReRunCMake.make
build_Xcode/CPString.xcodeproj/: project.pbxproj
build_Xcode/CPString.xcodeproj/project.xcworkspace/xcuserdata/josemanuelromoperedo.xcuserdatad/: UserInterfaceState.xcuserstate
build_Xcode/CPString.xcodeproj/xcuserdata/josemanuelromoperedo.xcuserdatad/xcschemes/: xcschememanagement.plist
build_Xcode/build_XCode/XCBuildData/: 0e68ce11d25cb45ae88dd05473e3a723-desc.xcbuild  0e68ce11d25cb45ae88dd05473e3a723-manifest.xcbuild  1e3b08be7958db789e65bb816052ac9a-desc.xcbuild  1e3b08be7958db789e65bb816052ac9a-manifest.xcbuild  36d110720bc0b6c94b6eb556d2c866b1-desc.xcbuild  36d110720bc0b6c94b6eb556d2c866b1-manifest.xcbuild  BuildDescriptionCacheIndex-750d97be0dd0578c7bf6718b73794f64  build.db  fa65cb939b4bcc3fc43bf336115bef0d-desc.xcbuild  fa65cb939b4bcc3fc43bf336115bef0d-manifest.xcbuild
build_Xcode/examples/CPP/BuildTest/: cmake_install.cmake
build_Xcode/examples/CPP/BuildTest/BuildTest.xcodeproj/: project.pbxproj
build_Xcode/examples/CPP/BuildTest/src/CPString.build/Debug/BuildTest.build/Objects-normal/x86_64/: BuildTest.LinkFileList  main.d
build_Xcode/examples/CPP/BuildTest/src/Debug/: BuildTest
build_Xcode/examples/CPP/IntegerConversion/: cmake_install.cmake
build_Xcode/examples/CPP/IntegerConversion/IntegerConversion.xcodeproj/: project.pbxproj
build_Xcode/examples/CPP/IntegerConversion/src/: cmake_install.cmake
build_Xcode/src/: cmake_install.cmake
build_Xcode/src/CPString.build/Debug/CPString.build/Objects-normal/x86_64/: CPString.LinkFileList  CPString.d  CPString_Flash.d
examples/: CMakeLists.txt
examples/1_BuildTest/: 1_BuildTest.ino
examples/1_BuildTest/CPP/: CMakeLists.txt  main.cpp
examples/1_BuildTest/PSoC/: 1_BuildTest.c
examples/2_IntegerConversion/: 2_IntegerConversion.ino
examples/2_IntegerConversion/CPP/: CMakeLists.txt  main.cpp
examples/2_IntegerConversion/PSoC/: 2_IntegerConversion.c
examples/3_MergingStrings/: 3_MergingStrings.ino
examples/3_MergingStrings/CPP/: CMakeLists.txt  main.cpp
examples/3_MergingStrings/PSoC/: 3_MergingStrings.c
examples/4_MemoryLeakCheck/: 4_MemoryLeakCheck.ino
examples/4_MemoryLeakCheck/PSoC/: 4_MemoryLeakCheck.c
examples/ArduinoIDE/BuildTest/: BuildTest.ino
examples/ArduinoIDE/IntegerConversion/: IntegerConversion.ino
examples/BuildTest/: 1_BuildTest.ino  CMakeLists.txt
examples/BuildTest/CPP/: CMakeLists.txt  main.cpp
examples/CPP/: CMakeLists.txt
examples/CPP/BuildTest/: CMakeLists.txt
examples/CPP/BuildTest/src/: CMakeLists.txt  main.cpp
examples/CPP/IntegerConversion/: CMakeLists.txt
examples/CPP/IntegerConversion/src/: CMakeLists.txt  main.cpp
examples/IntegerConversion/: IntegerConversion.ino
examples/IntegerConversion/CPP/: CMakeLists.txt  main.cpp
examples/MergingStrings/: MergingStrings.ino
examples/MergingStrings/CPP/: CMakeLists.txt  main.cpp
examples/NumberConversion/: CMakeLists.txt
examples/NumberConversion/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CPString.cpp  CPString.h  CPString_BuildSettings.h  CPString_Class.h  CPString_Definitions.h  EmbeddedString.cpp  EmbeddedString.h  EmbeddedString_BuildSettings.h  EmbeddedString_Class.h  EmbeddedString_Definitions.h
src/EmbeddedString_Flash/: CMakeLists.txt  EmbeddedString_Flash.cpp  EmbeddedString_Flash.h  EmbeddedString_FlashDefinitions.h
src/Flash/: CMakeLists.txt  CPString_Flash.cpp  CPString_Flash.h  CPString_FlashDefinitions.h
tests/: CMakeLists.txt
tests/BuildTest/: CMakeLists.txt
tests/BuildTest/include/: CMakeLists.txt
tests/BuildTest/src/: CMakeLists.txt  main.cpp
tests/NumberConversion/src/: main.cpp
